# sample-rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: dto.rs  error.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs  model.rs  sql.rs
src/controller/: role_controller.rs  user_controller.rs
src/entity/: role.rs  user.rs
src/model/: role.rs  user.rs
src/query/: role.rs  user.rs
src/service/: auth.rs  role.rs  user.rs
src/utils/: jwt.rs
