[package]
name = "sample_rust_api"
version = "1.0.0"
authors = ["Aunggoon Arpasunun <aunggoon.a@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.5", features = ["headers"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
headers = "0.3"
jsonwebtoken = "9"
lazy_static = "1.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
